v1.0.1 (21 Dec 2013)
  "printHelp()", "printUsage()" and "printVersion()" now exits correctly by
    default with code 0.

v1.0.0 (02 Dec 2013)
  Added support for multiple parsers. Now the parser is created using
    "createParser()".
  In previous versions, passing an array to "argv()" didn't uncache the module
    in order to reuse the parser. Now if you don't need to reuse it, pass an
    object { once: true } to "createParser()".
  Added an "error" event.
  Added "footer()". Now you can write text between the --version and email text
    lines when using the "readPackage()" function.
  When "argv()" was called with an input array from inside a Body or Command
    instance, the input array was not read.
  Removed the second parameter from the "end" event. Now the functions
    "printHelp()", "printUsage()" and "printVersion()" are accessible from the
    Argp instance.
  Minor bugfixes and improvements.

v0.2.1 (25 Nov 2013)
  The "fail()" function from the "end" event now prints the string message
    correctly.

v0.2.0 (25 Nov 2013)
  The "end" event now receives a second parameter with an object with the
    previous functions "printHelp()", "printUsage()", "printVersion()" and
    "fail()".
  Improved README.
  Added Travis integration.
  Some bugfixes.

v0.1.3 (25 Oct 2013)
  Added a fifth parameter ("fail") to the "end" event.
  Minor improvements and bugfixes.

v0.1.2 (04 Oct 2013)
  Minor speed improvements and bugfixes.

v0.1.1 (30 Sep 2013)
  An array with options can be passed to "argv()".

v0.1.0 (29 Sep 2013)
  Bump version.

v0.0.16 (28 Sep 2013)
  Added a new parameter to "help()" and "version()" to disable the short option.
  Added "exitStatus()".

v0.0.15 (27 Sep 2013)
  Renamed "help" to "synopsis", property of "argument()".
  Renamed "argument" to "metavar", property of "option()".
  Minor improvements.

v0.0.14 (26 Sep 2013)
  Added "command()", "main()" and "argv()" to the Body instance.
  Removed "end()".

v0.0.13 (26 Sep 2013)