@@ -260,13 +260,13 @@ Argp.prototype._newOption = function (o){
   if (o.opt){
     //Check for --help, --usage or --version
     if (this._showHelp && o.opt.id === "help"){
-      this.printHelp ();
+      return this.printHelp ();
     }
     if (this._showUsage && o.opt.id === "usage"){
-      this.printUsage ();
+      return this.printUsage ();
     }
     if (this._version && o.opt.id === "version"){
-      this.printVersion ();
+      return this.printVersion ();
     }
 
     if (o.opt.type === Array){
@@ -403,7 +403,6 @@ Argp.prototype._read = function (argv){
         negate: true,
         long: str || name
       });
-
       return;
     }
 
@@ -496,6 +495,7 @@ Argp.prototype._read = function (argv){
             flag: true,
             short: name
           });
+          if (me._inputError) return;
         }else{
           if (!i){
             //First option
@@ -510,8 +510,7 @@ Argp.prototype._read = function (argv){
                   short: name,
                   value: str.substring (1)
                 });
-                if (me._inputError) return;
-                break;
+                return;
               }else if (o.optional){
                 me._newOption ({
                   opt: o,
@@ -779,7 +778,13 @@ Argp.prototype.printHelp = function (code){
       this._columns);
 
   console.log (h);
-  process.exit (arguments.length === 1 ? code : this._exitStatus);
+  //Only exit if the are no error listeners
+  if (this.listeners ("error").length){
+    //Simulate an error to stop parsing the remaining options
+    this._inputError = true;
+  }else{
+    process.exit (arguments.length === 1 ? code : this._exitStatus);
+  }
 };
 
 Argp.prototype.printUsage = function (code){
@@ -864,14 +869,26 @@ Argp.prototype.printUsage = function (code){
   }
 
   console.log (usage);
-  process.exit (arguments.length === 1 ? code : this._exitStatus);
+  //Only exit if the are no error listeners
+  if (this.listeners ("error").length){
+    //Simulate an error to stop parsing the remaining options
+    this._inputError = true;
+  }else{
+    process.exit (arguments.length === 1 ? code : this._exitStatus);
+  }
 };
 
 Argp.prototype.printVersion = function (code){
   process.stdout.write (this._version
       ? wrap (this._version, this._columns) + "\n"
       : "");
-  process.exit (arguments.length === 1 ? code : this._exitStatus);
+  //Only exit if the are no error listeners
+  if (this.listeners ("error").length){
+    //Simulate an error to stop parsing the remaining options
+    this._inputError = true;
+  }else{
+    process.exit (arguments.length === 1 ? code : this._exitStatus);
+  }
 };
 
 Argp.prototype._argument = function (name, o){
